@@ -72,40 +72,55 @@ class E2EPass(gtirb_rewriting.Pass):
         return 42
 
 
-@pytest.mark.skipif(sys.platform == "win32", reason="does not run on windows")
-def test_e2e(tmpdir):
-    # Test that we can instrument GTIRB, reassemble it, and then run the
-    # binary. Our test binary just prints a string and then exits 0. Our
-    # modified binary will print out integers, the original string and then
-    # exit 42.
+class NopPass(gtirb_rewriting.Pass):
+    def begin_module(self, module, functions, rewriting_ctx):
+        rewriting_ctx.register_insert(
+            gtirb_rewriting.AllBlocksScope(
+                position=gtirb_rewriting.BlockPosition.ENTRY,
+            ),
+            gtirb_rewriting.Patch.from_function(self.nop_patch),
+        )
+        rewriting_ctx.register_insert(
+            gtirb_rewriting.AllBlocksScope(
+                position=gtirb_rewriting.BlockPosition.EXIT,
+            ),
+            gtirb_rewriting.Patch.from_function(self.nop_patch),
+        )
 
-    test_dir = pathlib.Path(__file__).parent
+    @gtirb_rewriting.patch_constraints()
+    def nop_patch(self, insertion_ctx):
+        return "nop"
 
+
+def disassemble(tmpdir: pathlib.Path, binary: pathlib.Path) -> gtirb.IR:
+    ir_path = tmpdir / f"{binary.name}.gtirb"
     subprocess.run(
-        ["ddisasm", test_dir / "e2e", "--ir", tmpdir / "e2e.gtirb", "-j1"],
+        ["ddisasm", binary, "--ir", ir_path, "-j1"],
         check=True,
     )
-    ir = gtirb.IR.load_protobuf(tmpdir / "e2e.gtirb")
+    ir = gtirb.IR.load_protobuf(str(ir_path))
+    return ir
 
-    pm = gtirb_rewriting.PassManager()
-    pm.add(E2EPass())
-    pm.run(ir)
 
-    ir.save_protobuf(tmpdir / "rewritten.gtirb")
+def pretty_print(tmpdir: pathlib.Path, ir: gtirb.IR) -> pathlib.Path:
+    ir_path = tmpdir / "rewritten.gtirb"
+    ir.save_protobuf(str(ir_path))
 
+    bin_path = tmpdir / "rewritten"
     result = subprocess.run(
         [
             "gtirb-pprinter",
             tmpdir / "rewritten.gtirb",
             "--policy=complete",
             "-b",
-            tmpdir / "rewritten",
+            bin_path,
             "-a",
             tmpdir / "rewritten.s",
         ],
         stderr=subprocess.PIPE,
         check=False,
     )
+
     sys.stderr.write(result.stderr.decode())
     assert result.returncode == 0
     if b"WARNING" in result.stderr:
@@ -114,9 +129,45 @@ def test_e2e(tmpdir):
         assert b"WARNING: found overlapping" not in result.stderr
         warnings.warn(UserWarning(result.stderr.decode()))
 
-    result = subprocess.run(str(tmpdir / "rewritten"), stdout=subprocess.PIPE)
+    return bin_path
+
+
+@pytest.mark.skipif(sys.platform == "win32", reason="does not run on windows")
+def test_e2e(tmpdir):
+    # Test that we can instrument GTIRB, reassemble it, and then run the
+    # binary. Our test binary just prints a string and then exits 0. Our
+    # modified binary will print out integers, the original string and then
+    # exit 42.
+
+    test_dir = pathlib.Path(__file__).parent
+    ir = disassemble(tmpdir, test_dir / "e2e")
+
+    pm = gtirb_rewriting.PassManager()
+    pm.add(E2EPass())
+    pm.run(ir)
+
+    bin_path = pretty_print(tmpdir, ir)
+    result = subprocess.run(str(bin_path), stdout=subprocess.PIPE)
     assert (
         result.stdout
         == b"print_integers: 1, 2, 3, 4, 5, 6, 7, 100\n1 arguments\n"
     )
     assert result.returncode == 42
+
+
+@pytest.mark.skipif(sys.platform == "win32", reason="does not run on windows")
+def test_e2e_unwind(tmpdir):
+    # Test that modifying IR doesn't break C++ exception handling.
+
+    test_dir = pathlib.Path(__file__).parent
+    ir = disassemble(tmpdir, test_dir / "unwind")
+
+    pm = gtirb_rewriting.PassManager()
+    pm.add(NopPass())
+    pm.run(ir)
+
+    bin_path = pretty_print(tmpdir, ir)
+    result = subprocess.run([bin_path, "1", "a", "2"], capture_output=True)
+    assert result.stdout == b"3\n"
+    assert result.stderr == b"a: stoi\n"
+    assert result.returncode == 0
