@@ -1,4 +1,6 @@
 0.2.0:
+- CFI directives are now preserved, allowing rewriting of C++ programs with
+  exception handling. Additionally, patches can specify CFI directives.
 - gtirb-rewriting now requires Python 3.7.
 - OffsetMapping.__setitem__'s behavior changed when indexing by an element. It
   assigns the passed MutableMapping to the internal storage instead of creating
